# the-oracle

./: .gitignore  README.md  pyproject.toml
docs/: commands.md
oracle/: __main__.py  client.py  formatter.py  utilities.py
